jadwal-serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: jadwal-infra
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx
